--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,9 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "./src/server.ts",
+  "scripts": {
+      "dev": "ts-node-dev ./src/server.ts"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^17.0.31",
