--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,12 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
-        "module": "commonjs",
-        "rootDir": "./src",
-        "outDir": "./dist",
+        "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
+        "module": "commonjs",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "skipLibCheck": true,
         "strict": true,
-        "skipLibCheck": true
+        "target": "ES2020"
     }
 }
