--- a/backend/package.json
+++ b/backend/package.json
@@ -3,14 +3,20 @@
     "version": "1.0.0",
     "main": "./src/server.ts",
     "scripts": {
-        "dev": "ts-node-dev ./src/server.ts"
+        "dev": "ts-node-dev ./src/server.ts",
+        "test": "jest"
     },
     "license": "MIT",
     "devDependencies": {
+        "@swc/core": "^1.2.181",
+        "@swc/jest": "^0.2.21",
         "@types/express": "^4.17.13",
+        "@types/jest": "^27.5.0",
         "@types/node": "^17.0.31",
         "@types/nodemailer": "^6.4.4",
+        "jest": "^28.1.0",
         "prisma": "^3.13.0",
+        "ts-node": "^10.7.0",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.6.4"
     },
