--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,11 +1,10 @@
 {
     "expo": {
-        "name": "mobile",
-        "slug": "mobile",
+        "name": "Feedget",
+        "slug": "feedget",
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
-        "userInterfaceStyle": "light",
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
