--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
     "main": "./src/server.ts",
     "scripts": {
         "dev": "ts-node-dev ./src/server.ts",
+        "build": "tsc",
+        "start": "node dist/server.js",
         "test": "jest"
     },
     "license": "MIT",
@@ -19,6 +21,7 @@
         "prisma": "^3.13.0",
         "ts-node": "^10.7.0",
         "ts-node-dev": "^1.1.8",
+        "tsc": "^2.0.4",
         "typescript": "^4.6.4"
     },
     "dependencies": {
